--- a/deploy-mydreamapp-docker/tasks/init.yml
+++ b/deploy-mydreamapp-docker/tasks/init.yml
@@ -3,10 +3,10 @@
   docker_container:
     name: "mydreamapp"
     recreate: yes
-    image: "nginx:latest"
-    #image: "registry.gitlab.com/dora-doudou/mydreamapp/mydreamapp:latest"
-    #ports:
-    #  - "80:4200"
+    #image: "nginx:latest"
+    image: "registry.gitlab.com/dora-doudou/mydreamapp/mydreamapp:latest"
     ports:
-      - "80:80"
+      - "80:4200"
+    #ports:
+     # - "80:80"
 
